// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper renders correctly with all selected 1`] = `
<DocumentFragment>
  .cache-i28g32-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
  gap: 0;
}

.cache-i28g32-StyledContainer .e19ft7rb4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
}

.cache-i28g32-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-tp2if-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-16ebxbi-StyledText-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-fkq8r-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.cache-fkq8r-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
  width: 100%;
}

.cache-sdib28-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

<div
    class="cache-i28g32-StyledContainer e19ft7rb0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-tp2if-StyledContainer-StyledBullet e11loam60"
      >
        <svg
          class="cache-1dnbbhk-StyledIcon-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-fkq8r-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-tp2if-StyledContainer-StyledBullet e11loam60"
      >
        <svg
          class="cache-1dnbbhk-StyledIcon-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-fkq8r-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-sdib28-StyledContainer-StyledBullet e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with animation 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.cache-i28g32-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
  gap: 0;
}

.cache-i28g32-StyledContainer .e19ft7rb4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
}

.cache-i28g32-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-tp2if-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-16ebxbi-StyledText-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-fkq8r-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.cache-fkq8r-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
  width: 100%;
}

.cache-sdib28-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.cache-12p7rjs-StyledLine-loadingStyle {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.cache-12p7rjs-StyledLine-loadingStyle::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.cache-7y11y9-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

<div
    class="cache-i28g32-StyledContainer e19ft7rb0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-tp2if-StyledContainer-StyledBullet e11loam60"
      >
        <svg
          class="cache-1dnbbhk-StyledIcon-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-fkq8r-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-sdib28-StyledContainer-StyledBullet e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-12p7rjs-StyledLine-loadingStyle e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-7y11y9-StyledContainer-StyledBullet e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-i28g32-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
  gap: 0;
}

.cache-i28g32-StyledContainer .e19ft7rb4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
}

.cache-i28g32-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-sdib28-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.cache-16ebxbi-StyledText-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-n9n5oq-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.cache-n9n5oq-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
}

.cache-7y11y9-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

<div
    class="cache-i28g32-StyledContainer e19ft7rb0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-sdib28-StyledContainer-StyledBullet e11loam60"
      >
        1
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-7y11y9-StyledContainer-StyledBullet e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-7y11y9-StyledContainer-StyledBullet e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with selected prop 1`] = `
<DocumentFragment>
  .cache-i28g32-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
  gap: 0;
}

.cache-i28g32-StyledContainer .e19ft7rb4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
}

.cache-i28g32-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-tp2if-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-16ebxbi-StyledText-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-fkq8r-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.cache-fkq8r-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
  width: 100%;
}

.cache-sdib28-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.cache-n9n5oq-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.cache-n9n5oq-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
}

.cache-7y11y9-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

<div
    class="cache-i28g32-StyledContainer e19ft7rb0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-tp2if-StyledContainer-StyledBullet e11loam60"
      >
        <svg
          class="cache-1dnbbhk-StyledIcon-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-fkq8r-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-sdib28-StyledContainer-StyledBullet e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-7y11y9-StyledContainer-StyledBullet e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with small size 1`] = `
<DocumentFragment>
  .cache-7czxf9-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
  gap: 8px;
}

.cache-7czxf9-StyledContainer .e19ft7rb4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
}

.cache-7czxf9-StyledContainer .e19ft7rb1 {
  height: 2px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-vvq8bc-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  width: 24px;
  height: 24px;
  font-size: 14px;
  margin-top: 4px;
}

.cache-2seue4-StyledText-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-n9n5oq-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.cache-n9n5oq-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
}

.cache-pqu96v-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 24px;
  height: 24px;
  font-size: 14px;
  margin-top: 4px;
}

<div
    class="cache-7czxf9-StyledContainer e19ft7rb0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-vvq8bc-StyledContainer-StyledBullet e11loam60"
      >
        1
      </div>
      <span
        class="e19ft7rb3 cache-2seue4-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-pqu96v-StyledContainer-StyledBullet e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb3 cache-2seue4-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-pqu96v-StyledContainer-StyledBullet e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb3 cache-2seue4-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with step number in row 1`] = `
<DocumentFragment>
  .cache-14umgav-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
  gap: 8px;
}

.cache-14umgav-StyledContainer .e19ft7rb4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  gap: 8px;
  white-space: nowrap;
}

.cache-14umgav-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-sdib28-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.cache-16ebxbi-StyledText-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.cache-n9n5oq-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.cache-n9n5oq-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
}

.cache-7y11y9-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

<div
    class="cache-14umgav-StyledContainer e19ft7rb0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-sdib28-StyledContainer-StyledBullet e11loam60"
      >
        1
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="cache-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-7y11y9-StyledContainer-StyledBullet e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="cache-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 cache-7y11y9-StyledContainer-StyledBullet e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb3 cache-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
